--- a/src/index.css
+++ b/src/index.css
@@ -102,6 +102,10 @@ ul li {
   font-size: 5.5rem;
   margin-bottom: 1.5rem;
 }
+.video_icon .MuiSvgIcon-root {
+  font-size: 6rem;
+}
+
 @media only screen and (min-width: 1199px) {
   .service_info .MuiSvgIcon-root {
     font-size: 5rem;
